GNU bug report logs - #36488
diffutils 3.7 make check failure ppc64le opensuse on colors test

Previous Next

Package: diffutils;

Reported by: Normand <normand <at> linux.vnet.ibm.com>

Date: Wed, 3 Jul 2019 11:21:01 UTC

Severity: normal

Merged with 25402, 34519

To reply to this bug, email your comments to 36488 AT debbugs.gnu.org.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-diffutils <at> gnu.org:
bug#36488; Package diffutils. (Wed, 03 Jul 2019 11:21:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Normand <normand <at> linux.vnet.ibm.com>:
New bug report received and forwarded. Copy sent to bug-diffutils <at> gnu.org. (Wed, 03 Jul 2019 11:21:02 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Normand <normand <at> linux.vnet.ibm.com>
To: bug-diffutils <at> gnu.org
Subject: diffutils 3.7 make check failure ppc64le opensuse on colors test
Date: Wed, 3 Jul 2019 13:19:55 +0200
diffutils 3.7  make check failure ppc64le opensuse on colors test as 
reported in OBS tool (1)


The extracted failure is a "Broken pipe"
```
[  185s] XFAIL: large-subopt
[  185s] PASS: new-file
[  185s] PASS: no-dereference
[  186s] PASS: no-newline-at-eof
[  186s] PASS: stdin
[  186s] PASS: strcoll-0-names
[  186s] PASS: filename-quoting
[  187s] strip-trailing-cr: skipped test: requires a working valgrind
[  187s] SKIP: strip-trailing-cr
[  187s] FAIL: colors
[  187s] =============================================
[  187s]    GNU diffutils 3.7: tests/test-suite.log
[  187s] =============================================
[  187s]
[  187s] # TOTAL: 22
[  187s] # PASS:  19
[  187s] # SKIP:  1
[  187s] # XFAIL: 1
[  187s] # FAIL:  1
[  187s] # XPASS: 0
[  187s] # ERROR: 0
...

[  187s] FAIL: colors
[  187s] ============
...
[  187s] + compare exp out
[  187s] + compare_dev_null_ exp out
[  187s] + test 2 = 2
[  187s] + test xexp = x/dev/null
[  187s] + test xout = x/dev/null
[  187s] + return 2
[  187s] + case $? in
[  187s] + compare_ exp out
[  187s] + diff -u exp out
[  187s] + mkfifo fifo
[  187s] + printf %1000000s-a
[  187s] + printf %1000000s-b
[  187s] + diff --color=always ---presume-output-tty a b
[  187s] + head -c 10
[  187s] diff: standard output: Broken pipe
[  187s] + test 2 = 141
[  187s] + fail=1
[  187s] + Exit 1
```


(1) 
https://build.opensuse.org/package/live_build_log/home:michel_mno:branches:Base:System/diffutils/openSUSE_Factory_PowerPC/ppc64le



-- 
Michel Normand





Information forwarded to bug-diffutils <at> gnu.org:
bug#36488; Package diffutils. (Sat, 28 Aug 2021 15:41:02 GMT) Full text and rfc822 format available.

Message #8 received at 36488 <at> debbugs.gnu.org (full text, mbox):

From: Thiago Jung Bauermann <bauermann <at> kolabnow.com>
To: 36488 <at> debbugs.gnu.org
Cc: Normand <normand <at> linux.vnet.ibm.com>
Subject: Re: diffutils 3.7 make check failure ppc64le opensuse on colors test
Date: Sat, 28 Aug 2021 12:40:35 -0300
Hello,

Em quarta-feira, 3 de julho de 2019, às 08:19:55 -03, Normand escreveu:
> diffutils 3.7  make check failure ppc64le opensuse on colors test as
> reported in OBS tool (1)
> 
> 
> The extracted failure is a "Broken pipe"

I believe this is the same problem reported in bug 34519.
The Debian build also fails with "diff: standard output: Broken pipe".

-- 
Thanks,
Thiago






Merged 34519 36488. Request was from Paul Eggert <eggert <at> cs.ucla.edu> to control <at> debbugs.gnu.org. (Sun, 29 Aug 2021 06:56:01 GMT) Full text and rfc822 format available.

Merged 25402 34519 36488. Request was from Paul Eggert <eggert <at> cs.ucla.edu> to control <at> debbugs.gnu.org. (Sun, 29 Aug 2021 07:20:02 GMT) Full text and rfc822 format available.

Reply sent to Paul Eggert <eggert <at> cs.ucla.edu>:
You have taken responsibility. (Sun, 29 Aug 2021 07:23:02 GMT) Full text and rfc822 format available.

Notification sent to Normand <normand <at> linux.vnet.ibm.com>:
bug acknowledged by developer. (Sun, 29 Aug 2021 07:23:02 GMT) Full text and rfc822 format available.

Message #17 received at 36488-done <at> debbugs.gnu.org (full text, mbox):

From: Paul Eggert <eggert <at> cs.ucla.edu>
To: Thiago Jung Bauermann <bauermann <at> kolabnow.com>
Cc: Frédéric Bonnard <frediz <at> debian.org>,
 922552 <at> bugs.debian.org, Santiago Vila <sanvila <at> unex.es>,
 36488-done <at> debbugs.gnu.org, Normand <normand <at> linux.vnet.ibm.com>
Subject: Re: [bug-diffutils] bug#36488: diffutils 3.7 make check failure
 ppc64le opensuse on colors test
Date: Sun, 29 Aug 2021 00:22:27 -0700
[Message part 1 (text/plain, inline)]
On 8/28/21 8:40 AM, Thiago Jung Bauermann via bug-diffutils via All 
diffutils discussion. wrote:

> I believe this is the same problem reported in bug 34519.
> The Debian build also fails with "diff: standard output: Broken pipe".

Thanks for tracking that down. Frédéric's analysis in 
<https://bugs.debian.org/922552#19> was helpful.

I found some time to look into this bug, and installed into 
Savannah.gnu.org diffutils the attached patch, which I hope fixes the 
bug although I don't have the relevant platform to test it. Please give 
it a try.

Once this patch is part of a release, Debian shouldn't need any patches 
for diffutils.

For now I am closing the diffutils bug report 
<https://bugs.gnu.org/36488>; if I was too optimistic and the patch 
doesn't fix things we can always reopen it.
[0001-diff-cleanup-signal-handling-just-before-exit.patch (text/x-patch, attachment)]

Reply sent to Paul Eggert <eggert <at> cs.ucla.edu>:
You have taken responsibility. (Sun, 29 Aug 2021 07:23:02 GMT) Full text and rfc822 format available.

Notification sent to Santiago Vila <sanvila <at> unex.es>:
bug acknowledged by developer. (Sun, 29 Aug 2021 07:23:02 GMT) Full text and rfc822 format available.

Reply sent to Paul Eggert <eggert <at> cs.ucla.edu>:
You have taken responsibility. (Sun, 29 Aug 2021 07:23:03 GMT) Full text and rfc822 format available.

Notification sent to Santiago Vila <sanvila <at> unex.es>:
bug acknowledged by developer. (Sun, 29 Aug 2021 07:23:03 GMT) Full text and rfc822 format available.

Information forwarded to bug-diffutils <at> gnu.org:
bug#36488; Package diffutils. (Sun, 29 Aug 2021 11:15:02 GMT) Full text and rfc822 format available.

Message #30 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Gisle Vanem <gisle.vanem <at> gmail.com>
To: bug-diffutils <at> gnu.org
Subject: Re: [bug-diffutils] bug#36488: bug#36488: diffutils 3.7 make check
 failure ppc64le opensuse on colors test
Date: Sun, 29 Aug 2021 13:13:56 +0200
Paul Eggert wrote:

> +static signal_handler
> +xsignal (int sig, signal_handler func)
> +{
> +  signal_handler h = signal (sig, func);
> +  if (h == SIG_ERR)
> +    pfatal_with_name ("signal");
> +  return h;
> +}
> +

On Windows, this causes a "diff --color file1 file2"
to exit with "diff.exe signal". How useful.

With some added trace-code I found this was for
SIGHUP (=1) which is not supported. So I just dropped
SIGHUP from the list.

-- 
--gv




Information forwarded to bug-diffutils <at> gnu.org:
bug#36488; Package diffutils. (Sun, 29 Aug 2021 18:21:01 GMT) Full text and rfc822 format available.

Message #33 received at 36488 <at> debbugs.gnu.org (full text, mbox):

From: Paul Eggert <eggert <at> cs.ucla.edu>
To: Gisle Vanem <gisle.vanem <at> gmail.com>
Cc: 36488 <at> debbugs.gnu.org
Subject: Re: bug#36488: diffutils 3.7 make check failure ppc64le opensuse on
 colors test
Date: Sun, 29 Aug 2021 11:20:03 -0700
[Message part 1 (text/plain, inline)]
On 8/29/21 4:13 AM, Gisle Vanem wrote:

> With some added trace-code I found this was for
> SIGHUP (=1) which is not supported. So I just dropped
> SIGHUP from the list. 

Thanks for reporting that. I installed the attached, which I hope fixes 
the problem in a more-portable way. Please give it a try.

In hindsight perhaps 'diff' should never have added signal handling, as 
it's a bug magnet. If your display's colors get messed up due to ^C the 
shell should fix the colors, not 'diff'.
[0001-diff-port-better-to-MS-Windows.patch (text/x-patch, attachment)]

Information forwarded to bug-diffutils <at> gnu.org:
bug#36488; Package diffutils. (Sun, 29 Aug 2021 21:27:01 GMT) Full text and rfc822 format available.

Message #36 received at 36488 <at> debbugs.gnu.org (full text, mbox):

From: Thiago Jung Bauermann <bauermann <at> kolabnow.com>
To: Paul Eggert <eggert <at> cs.ucla.edu>
Cc: Frédéric Bonnard <frediz <at> debian.org>,
 Santiago Vila <sanvila <at> unex.es>, 36488 <at> debbugs.gnu.org,
 Normand <normand <at> linux.vnet.ibm.com>
Subject: Re: [bug-diffutils] bug#36488: diffutils 3.7 make check failure
 ppc64le opensuse on colors test
Date: Sun, 29 Aug 2021 18:26:01 -0300
Hello Paul,

Em domingo, 29 de agosto de 2021, às 04:22:27 -03, Paul Eggert escreveu:
> On 8/28/21 8:40 AM, Thiago Jung Bauermann via bug-diffutils via All
> 
> diffutils discussion. wrote:
> > I believe this is the same problem reported in bug 34519.
> > The Debian build also fails with "diff: standard output: Broken pipe".
> 
> Thanks for tracking that down. Frédéric's analysis in
> <https://bugs.debian.org/922552#19> was helpful.
> 
> I found some time to look into this bug, and installed into
> Savannah.gnu.org diffutils the attached patch, which I hope fixes the
> bug although I don't have the relevant platform to test it. Please give
> it a try.

Awesome! That was very fast. Thank you very much.

> Once this patch is part of a release, Debian shouldn't need any patches
> for diffutils.
> 
> For now I am closing the diffutils bug report
> <https://bugs.gnu.org/36488>; if I was too optimistic and the patch
> doesn't fix things we can always reopen it.

Unfortunately the colors test still hits the same problem in some runs even 
with this patch applied.

Do you have access to a powerpc64le-linux machine? If you want, I can give 
you an account on the VM I’m using.

-- 
Thanks,
Thiago







Did not alter fixed versions and reopened. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Sun, 29 Aug 2021 21:50:02 GMT) Full text and rfc822 format available.

Information forwarded to bug-diffutils <at> gnu.org:
bug#36488; Package diffutils. (Sun, 29 Aug 2021 22:01:01 GMT) Full text and rfc822 format available.

Message #41 received at 36488 <at> debbugs.gnu.org (full text, mbox):

From: Paul Eggert <eggert <at> cs.ucla.edu>
To: Thiago Jung Bauermann <bauermann <at> kolabnow.com>
Cc: Frédéric Bonnard <frediz <at> debian.org>,
 Santiago Vila <sanvila <at> unex.es>, 36488 <at> debbugs.gnu.org,
 Normand <normand <at> linux.vnet.ibm.com>
Subject: Re: [bug-diffutils] bug#36488: diffutils 3.7 make check failure
 ppc64le opensuse on colors test
Date: Sun, 29 Aug 2021 15:00:17 -0700
On 8/29/21 2:26 PM, Thiago Jung Bauermann wrote:

> Unfortunately the colors test still hits the same problem in some runs even
> with this patch applied.

Too bad. I reopened the bug report.

> Do you have access to a powerpc64le-linux machine? If you want, I can give
> you an account on the VM I’m using.

An account would be helpful, thanks.




This bug report was last modified 2 years and 237 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.